ADD game_session
